--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,15 +12,47 @@
  *= require bootstrap_and_overrides
  *= require_tree .
 */
+ 
+//.content {
+//  background-color: #eee;
+//  padding: 20px;
+//  margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
+//  -webkit-border-radius: 0 0 6px 6px;
+//  -moz-border-radius: 0 0 6px 6px;
+//  border-radius: 0 0 6px 6px;
+//  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
+//  -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
+//  box-shadow: 0 1px 2px rgba(0,0,0,.15);
+//}
 
-.content {
-  background-color: #eee;
-  padding: 20px;
-  margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
-  -webkit-border-radius: 0 0 6px 6px;
-  -moz-border-radius: 0 0 6px 6px;
-  border-radius: 0 0 6px 6px;
-  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-  -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-  box-shadow: 0 1px 2px rgba(0,0,0,.15);
+@import "compass/css3/background-size";
+@import "compass/typography/text/nowrap";
+
+body section {
+  clear: both;
+  display: none;
+  &#current-roster {
+    display: block;
+  }
+}
+
+td.score {
+  padding-top: 13px;
+  strong {
+    font-size: 20px;
+  }
+}
+
+.navbar-inner {
+  .brand {
+    @include background-size(contain);
+    
+    background: image-url('logos/pittsburgh-pirates.png') no-repeat 0 0 scroll transparent;
+    display: block;
+    padding-left: 60px !important;
+  }
+}
+
+.btn {
+  @include nowrap;
 }
