--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,225 @@
-<h3>Home</h3>
+<section id="current-roster">
+  <h1>Current Roster</h1>
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>Pitchers</th>
+        <th>Catchers</th>
+        <th>Infielders</th>
+        <th>Outfielders</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td><a href="#recovery-habits" class="navigate">Jim Smith</a></td>
+        <td><a href="#recovery-habits" class="navigate">Jim Smith</a></td>
+        <td><a href="#recovery-habits" class="navigate">Jim Smith</a></td>
+        <td><a href="#recovery-habits" class="navigate">Jim Smith</a></td>
+      </tr>
+      <tr>
+        <td><a href="#recovery-habits" class="navigate">Jim Smith</a></td>
+        <td><a href="#recovery-habits" class="navigate">Jim Smith</a></td>
+        <td><a href="#recovery-habits" class="navigate">Jim Smith</a></td>
+        <td><a href="#recovery-habits" class="navigate">Jim Smith</a></td>
+      </tr>
+      <tr>
+        <td><a href="#recovery-habits" class="navigate">Jim Smith</a></td>
+        <td><a href="#recovery-habits" class="navigate">Jim Smith</a></td>
+        <td><a href="#recovery-habits" class="navigate">Jim Smith</a></td>
+        <td><a href="#recovery-habits" class="navigate">Jim Smith</a></td>
+      </tr>
+    </tbody>
+  </table>
+</section>
+
+<section class="question-set" id="recovery-habits">
+  <h1>Recovery Habits</h1>
+  <table class="table">
+    <tbody>
+      <tr>
+        <td><strong>Sleep Hours</strong></td>
+        <td><a href="#" class="answer btn btn-success" data-value="2">&gt; 8</a></td>
+        <td><a href="#" class="answer btn btn-primary" data-value="1">6-8</a></td>
+        <td><a href="#" class="answer btn btn-danger" data-value="-1">&lt; 8</a></td>
+        <td class="score"><strong></strong></td>
+      </tr>
+      <tr>
+        <td><strong>Active Cool Down</strong></td>
+        <td><a href="#" class="answer btn btn-success" data-value="2">Yes</a></td>
+        <td><a href="#" class="answer btn btn-danger" data-value="-1">No</a></td>
+        <td></td>
+        <td class="score"><strong></strong></td>
+      </tr>
+      <tr>
+        <td><strong>Nap / Relaxation</strong></td>
+        <td><a href="#" class="answer btn btn-success" data-value="2">Yes</a></td>
+        <td><a href="#" class="answer btn btn-danger" data-value="-1">No</a></td>
+        <td></td>
+        <td class="score"><strong></strong></td>
+      </tr>
+      <tr>
+        <td><strong>Cold Tub / Contrast / Ice</strong></td>
+        <td><a href="#" class="answer btn btn-success" data-value="2">Yes</a></td>
+        <td><a href="#" class="answer btn btn-danger" data-value="-1">No</a></td>
+        <td></td>
+        <td class="score"><strong></strong></td>
+      </tr>
+      <tr>
+        <td><strong>Post Activity Protein Shake</strong></td>
+        <td><a href="#" class="answer btn btn-success" data-value="2">Yes</a></td>
+        <td><a href="#" class="answer btn btn-danger" data-value="-1">No</a></td>
+        <td></td>
+        <td class="score"><strong></strong></td>
+      </tr>
+      <tr>
+        <td><strong>Muscle Armor</strong></td>
+        <td><a href="#" class="answer btn btn-success" data-value="2">Yes</a></td>
+        <td><a href="#" class="answer btn btn-danger" data-value="-1">No</a></td>
+        <td></td>
+        <td class="score"><strong></strong></td>
+      </tr>
+    </tbody>
+  </table>
+  <a href="#current-roster" class="navigate btn btn-inverse pull-left">Prev</a>
+  <a href="#nutrition" class="navigate btn btn-inverse pull-right next disabled">Next</a>
+</section>
+
+<section class="question-set" id="nutrition">
+  <h1>Nutrition</h1>
+  <table class="table">
+    <tbody>
+      <tr>
+        <td><strong>Breakfast Within 1 Hour Waking</strong></td>
+        <td><a href="#" class="answer btn btn-success" data-value="2">Yes</a></td>
+        <td><a href="#" class="answer btn btn-danger" data-value="-1">No</a></td>
+        <td></td>
+        <td class="score"><strong></strong></td>
+      </tr>
+      <tr>
+        <td><strong>Meals Per Day</strong></td>
+        <td><a href="#" class="answer btn btn-success" data-value="2">&gt; 4</a></td>
+        <td><a href="#" class="answer btn btn-primary" data-value="1">3</a></td>
+        <td><a href="#" class="answer btn btn-danger" data-value="-1">&lt; 3</a></td>
+        <td class="score"><strong></strong></td>
+      </tr>
+      <tr>
+        <td><strong>Hydration</strong></td>
+        <td><a href="#" class="answer btn btn-success" data-value="2">Clear</a></td>
+        <td><a href="#" class="answer btn btn-primary" data-value="1">Medium</a></td>
+        <td><a href="#" class="answer btn btn-danger" data-value="-1">Dark</a></td>
+        <td class="score"><strong></strong></td>
+      </tr>
+      <tr>
+        <td><strong>Caffeine Occurrences</strong></td>
+        <td><a href="#" class="answer btn btn-success" data-value="2">None</a></td>
+        <td><a href="#" class="answer btn btn-danger" data-value="-1">&gt; 2</a></td>
+        <td></td>
+        <td class="score"><strong></strong></td>
+      </tr>
+      <tr>
+        <td><strong>Alcohol Use</strong></td>
+        <td><a href="#" class="answer btn btn-success" data-value="2">0</a></td>
+        <td><a href="#" class="answer btn btn-primary" data-value="1">1-3</a></td>
+        <td><a href="#" class="answer btn btn-danger" data-value="-1">&gt; 3</a></td>
+        <td class="score"><strong></strong></td>
+      </tr>
+    </tbody>
+  </table>
+  <a href="#recovery-habits" class="navigate btn btn-inverse pull-left">Prev</a>
+  <a href="#uncontrolables" class="navigate btn btn-inverse pull-right next disabled">Next</a>
+</section>
+
+<section class="question-set" id="uncontrolables">
+  <h1>Uncontrolables</h1>
+  <table class="table">
+    <tbody>
+      <tr>
+        <td><strong>Current Soreness</strong></td>
+        <td><a href="#" class="answer btn btn-success" data-value="2">None</a></td>
+        <td><a href="#" class="answer btn btn-primary" data-value="1">Some</a></td>
+        <td><a href="#" class="answer btn btn-warning" data-value="0">Mod</a></td>
+        <td><a href="#" class="answer btn btn-danger" data-value="-1">High</a></td>
+        <td class="score"><strong></strong></td>
+      </tr>
+      <tr>
+        <td><strong>Consecutive Days Activity</strong></td>
+        <td><a href="#" class="answer btn btn-success" data-value="2">0-3</a></td>
+        <td><a href="#" class="answer btn btn-primary" data-value="1">4-9</a></td>
+        <td><a href="#" class="answer btn btn-danger" data-value="-1">&lt; 9</a></td>
+        <td></td>
+        <td class="score"><strong></strong></td>
+      </tr>
+      <tr>
+        <td><strong>Temperature</strong></td>
+        <td><a href="#" class="answer btn btn-success" data-value="2">&lt; 80</a></td>
+        <td><a href="#" class="answer btn btn-primary" data-value="1">80-90</a></td>
+        <td><a href="#" class="answer btn btn-danger" data-value="-1">&gt; 90</a></td>
+        <td></td>
+        <td class="score"><strong></strong></td>
+      </tr>
+      <tr>
+        <td><strong>Time Traveled (hours)</strong></td>
+        <td><a href="#" class="answer btn btn-success" data-value="2">&lt; 3</a></td>
+        <td><a href="#" class="answer btn btn-primary" data-value="1">3-6</a></td>
+        <td><a href="#" class="answer btn btn-danger" data-value="-1">&gt; 6</a></td>
+        <td></td>
+        <td class="score"><strong></strong></td>
+      </tr>
+    </tbody>
+  </table>
+  <a href="#nutrition" class="navigate btn btn-inverse pull-left">Prev</a>
+  <a href="#summary" class="navigate btn btn-inverse pull-right next disabled">Next</a>
+</section>
+
+<section id="summary">
+  <div class="row-fluid">
+    <div class="span6" id="final-score">
+      <h1>Final Score: <span id="score">0</span></h1>
+    </div>
+    
+    <div class="span6" id="scale">
+      <h3>Scale</h3>
+      <table class="table table-bordered">
+        <tr>
+          <td><span class="label label-success">9 or More</span></td>
+          <td>Fully Recovered</td>
+        </tr>
+        <tr>
+          <td><span class="label label-info">7-8</span></td>
+          <td>Mostly Recovered</td>
+        </tr>
+        <tr>
+          <td><span class="label">5-6</span></td>
+          <td>Somewhat Recovered</td>
+        </tr>
+        <tr>
+          <td><span class="label label-warning">3-4</span></td>
+          <td>Under Recovered</td>
+        </tr>
+        <tr>
+          <td><span class="label label-important">Less than 3</span></td>
+          <td>Severely Under Recovered</td>
+        </tr>
+      </table>
+    </div>
+  </div>
+  
+  <div class="row-fluid">
+    <div class="span6" id="needs-for-improvement">
+      <h3>Individual Needs for improvement</h3>
+      <dl>
+        <dt>Recovery Habits</dt>
+        <dd>A description list is perfect for defining terms.</dd>
+        <dt>Nutrition</dt>
+        <dd>Vestibulum id ligula porta felis euismod semper eget lacinia odio sem nec elit.</dd>
+        <dd>Donec id elit non mi porta gravida at eget metus.</dd>
+        <dt>Uncontrolables</dt>
+        <dd>Etiam porta sem malesuada magna mollis euismod.</dd>
+      </dl>
+    </div>
+  
+    <div class="span6" id="graph">
+      <h3>Graph Goes Here</h3>
+    </div>
+  </div>
+</section>
