--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,23 +15,19 @@
   <body>
     <header class="navbar navbar-fixed-top">
       <nav class="navbar-inner">
-        <div class="container">
+        <div class="container-fluid">
           <%= render 'layouts/navigation' %>
         </div>
       </nav>
     </header>
     <div id="main" role="main">
-      <div class="container">
+      <div class="container-fluid">
         <div class="content">
-           <div class="row">
-            <div class="span12">
-              <%= render 'layouts/messages' %>
-              <%= yield %>
-            </div>
-          </div>
-          <footer>
-          </footer>
+          <%= render 'layouts/messages' %>
+          <%= yield %>
         </div>
+        <footer>
+        </footer>
       </div> <!--! end of .container -->
     </div> <!--! end of #main -->
   </body>
