--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -32,7 +32,7 @@
   </table>
 </section>
 
-<section class="question-set" id="recovery-habits">
+<section class="clearfix question-set" id="recovery-habits">
   <h1>Recovery Habits</h1>
   <table class="table">
     <tbody>
@@ -84,7 +84,7 @@
   <a href="#nutrition" class="navigate btn btn-inverse pull-right next disabled">Next</a>
 </section>
 
-<section class="question-set" id="nutrition">
+<section class="clearfix question-set" id="nutrition">
   <h1>Nutrition</h1>
   <table class="table">
     <tbody>
@@ -129,7 +129,7 @@
   <a href="#uncontrolables" class="navigate btn btn-inverse pull-right next disabled">Next</a>
 </section>
 
-<section class="question-set" id="uncontrolables">
+<section class="clearfix question-set" id="uncontrolables">
   <h1>Uncontrolables</h1>
   <table class="table">
     <tbody>
