--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -27,10 +27,11 @@
 
 @import "compass/css3/background-size";
 @import "compass/typography/text/nowrap";
+@import "compass/typography/text/ellipsis";
 
 body section {
   clear: both;
-  display: none;
+//  display: none;
   margin-bottom: 20px;
   &#current-roster {
     display: block;
@@ -39,11 +40,21 @@ body section {
 
 td {
   vertical-align: middle !important;
-}
-
-td.score {
-  strong {
-    font-size: 20px;
+  &.score {
+    strong {
+      font-size: 20px;
+    }
+  }
+  
+  .btn {
+    @include ellipsis;
+    
+    box-sizing: border-box;
+    text-align: center;
+    width: 70px;
+    &.btn-small {
+      width: 48px;
+    }
   }
 }
 
