--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -31,7 +31,7 @@
 
 body section {
   clear: both;
-//  display: none;
+  display: none;
   margin-bottom: 20px;
   &#current-roster {
     display: block;
