--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -32,7 +32,7 @@
 .home {
   section {
     clear: both;
-//    display: none;
+    display: none;
     margin-bottom: 20px;
     &#current-roster {
       display: block;
