--- a/app/views/divisions/show.html.erb
+++ b/app/views/divisions/show.html.erb
@@ -1,16 +1,21 @@
 <%- model_class = Division -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+  <h1><%= @division.name %></h1>
 </div>
 
 <dl class="dl-horizontal">
-  <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
-  <dd><%= @division.name %></dd>
   <dt><strong><%= model_class.human_attribute_name(:organization_id) %>:</strong></dt>
-  <dd><%= @division.organization_id %></dd>
+  <dd><%= link_to @division.organization, @division.organization %></dd>
+  
+  <dt><strong><%=t 'groups' %>:</strong></dt>
+  <dd><%= raw(@division.groups.map{|group| link_to(group, [@division,group])}.join(', ')) %></dd>
 </dl>
 
+
 <div class="form-actions">
+  <%= link_to t('create_new_group'),
+              new_division_group_path(@division), :class => 'btn btn-primary'  %>
+              
   <%= link_to t('.back', :default => t("helpers.links.back")),
               divisions_path, :class => 'btn'  %>
   <%= link_to t('.edit', :default => t("helpers.links.edit")),
