--- a/app/views/assigned_question_sets/_form.html.erb
+++ b/app/views/assigned_question_sets/_form.html.erb
@@ -1,10 +1,14 @@
-<%= simple_form_for @assigned_question_set, :html => { :class => 'form-horizontal' } do |f| %>
-  <%= f.input :question_set_id %>
-  <%= f.input :survey_id %>
-  <%= f.input :position %>
+<%= simple_form_for [parent,@assigned_question_set], :html => { :class => 'form-horizontal' } do |f| %>
+  <%= f.simple_fields_for :question_set do |question_set_form| %>
+    <%= question_set_form.input :name %>
+    <%= question_set_form.input :description %>
+  <% end %>
+  
+  <%= f.input :position, input_html: { value: (@assigned_question_set.position || (parent.assigned_question_sets.last ? (parent.assigned_question_sets.last.position || 0) + 1 : 1)) }, hint: t('position_hint') %>
+  
   <div class="form-actions">
     <%= f.button :submit, :class => 'btn-primary' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                assigned_question_sets_path, :class => 'btn' %>
+                [parent], :class => 'btn' %>
   </div>
 <% end %>
