--- a/app/views/assigned_question_sets/show.html.erb
+++ b/app/views/assigned_question_sets/show.html.erb
@@ -1,20 +1,55 @@
 <%- model_class = AssignedQuestionSet -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+  <h1><%= parent %>: <%= @assigned_question_set %></h1>
 </div>
 
-<dl class="dl-horizontal">
-  <dt><strong><%= model_class.human_attribute_name(:question_set_id) %>:</strong></dt>
-  <dd><%= @assigned_question_set.question_set_id %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:survey_id) %>:</strong></dt>
-  <dd><%= @assigned_question_set.survey_id %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:position) %>:</strong></dt>
-  <dd><%= @assigned_question_set.position %></dd>
-</dl>
+<p><%= @assigned_question_set.question_set.description %></p>
+
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th><%=t 'question' %></th>
+      <th><%=t 'choices' %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @assigned_question_set.question_set.assigned_questions.each do |assigned_question| %>
+      <tr>
+        <td><%= link_to assigned_question, [resource,assigned_question] %></td>
+        <td>
+          <div class="btn-group">
+            <a class="btn btn-inverse btn-mini dropdown-toggle" data-toggle="dropdown" href="#">
+              <%= assigned_question.question.responses.count %> <%=t 'choices' %>
+              <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu">
+              <% assigned_question.question.responses.each do |response| %>
+                <li><%= link_to raw(response.to_s), edit_question_response_path(assigned_question.question) %></li>
+              <% end %>
+              <li><%= link_to t('add_response'), new_question_response_path(assigned_question.question) %></li>
+            </ul>
+          </div>
+        </td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      [:edit,resource,assigned_question], :class => 'btn btn-mini' %>
+          <%= link_to t('remove'),
+                      [resource,assigned_question],
+                      :method => :delete,
+                      :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure? This will remove this question from this question set.')),
+                      :class => 'btn btn-mini btn-danger' %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
 
 <div class="form-actions">
+  <%= link_to t('add_question'),
+              new_assigned_question_set_assigned_question_path(resource), :class => 'btn btn-primary'  %>
   <%= link_to t('.back', :default => t("helpers.links.back")),
-              assigned_question_sets_path, :class => 'btn'  %>
+              parent, :class => 'btn'  %>
   <%= link_to t('.edit', :default => t("helpers.links.edit")),
               edit_assigned_question_set_path(@assigned_question_set), :class => 'btn' %>
   <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
