--- a/app/views/assigned_questions/show.html.erb
+++ b/app/views/assigned_questions/show.html.erb
@@ -1,20 +1,40 @@
 <%- model_class = AssignedQuestion -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+  <h1><%=t 'response_choices_for' %> "<%= resource %>"</h1>
 </div>
 
-<dl class="dl-horizontal">
-  <dt><strong><%= model_class.human_attribute_name(:question_id) %>:</strong></dt>
-  <dd><%= @assigned_question.question_id %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:question_set_id) %>:</strong></dt>
-  <dd><%= @assigned_question.question_set_id %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:position) %>:</strong></dt>
-  <dd><%= @assigned_question.position %></dd>
-</dl>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th><%=t 'response' %></th>
+      <th><%=t 'points' %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @assigned_question.question.responses.each do |response| %>
+      <tr>
+        <td><%= raw(response.to_s) %></td>
+        <td><span class="badge badge-inverse"><%= response.points %></span></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      [:edit,resource.question,response], :class => 'btn btn-mini' %>
+          <%= link_to t('remove'),
+                      question_response_path(resource.question,response,assigned_question_id: resource.id, assigned_question_set_id: parent.id),
+                      :method => :delete,
+                      :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure? This will remove this question from this question set.')),
+                      :class => 'btn btn-mini btn-danger' %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
 
 <div class="form-actions">
+  <%= link_to t('add_response'),
+              new_question_response_path(resource.question,assigned_question_id: resource.id, assigned_question_set_id: parent.id), :class => 'btn btn-primary'  %>
   <%= link_to t('.back', :default => t("helpers.links.back")),
-              assigned_questions_path, :class => 'btn'  %>
+              [resource.assigned_question_sets.first.survey,resource.assigned_question_sets.first], :class => 'btn'  %>
   <%= link_to t('.edit', :default => t("helpers.links.edit")),
               edit_assigned_question_path(@assigned_question), :class => 'btn' %>
   <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
