--- a/app/views/responses/_form.html.erb
+++ b/app/views/responses/_form.html.erb
@@ -1,11 +1,17 @@
-<%= simple_form_for @response, :html => { :class => 'form-horizontal' } do |f| %>
-  <%= f.input :question_id %>
+<%= simple_form_for [parent,@response], :html => { :class => 'form-horizontal' } do |f| %>
   <%= f.input :short_text %>
   <%= f.input :long_text %>
   <%= f.input :points %>
+  <%= f.input :position, input_html: { value: (resource.position || (parent.responses.last ? (parent.responses.last.position || 0) + 1 : 1)) }, hint: t('position_hint') %>
+  
+  <% if params[:assigned_question_id] %>
+    <%= hidden_field_tag :assigned_question_id, params[:assigned_question_id] %>
+    <%= hidden_field_tag :assigned_question_set_id, params[:assigned_question_set_id] %>
+  <% end %>
+  
   <div class="form-actions">
     <%= f.button :submit, :class => 'btn-primary' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                responses_path, :class => 'btn' %>
+                parent, :class => 'back btn' %>
   </div>
 <% end %>
