--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -1,14 +1,51 @@
 <%- model_class = Survey -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+  <h1><%= @survey %></h1>
 </div>
 
-<dl class="dl-horizontal">
-  <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
-  <dd><%= @survey.name %></dd>
-</dl>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th><%= model_class.human_attribute_name(:name) %></th>
+      <th><%=t 'questions' %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @survey.assigned_question_sets.each do |assigned_question_set| %>
+      <tr>
+        <td><%= link_to assigned_question_set, [@survey,assigned_question_set] %></td>
+        <td>
+          <div class="btn-group">
+            <a class="btn btn-inverse btn-mini dropdown-toggle" data-toggle="dropdown" href="#">
+              <%= assigned_question_set.assigned_questions.count %> <%=t 'questions' %>
+              <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu">
+              <% assigned_question_set.assigned_questions.each do |assigned_question| %>
+                <li><%= link_to assigned_question, [:edit,assigned_question_set,assigned_question] %></li>
+              <% end %>
+              <li><%= link_to t('add_question'), [:new,assigned_question_set,:assigned_question] %></li>
+            </ul>
+          </div>
+        </td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_survey_assigned_question_set_path(@survey,assigned_question_set), :class => 'btn btn-mini' %>
+          <%= link_to t('remove'),
+                      survey_assigned_question_set_path(@survey,assigned_question_set),
+                      :method => :delete,
+                      :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
+                      :class => 'btn btn-mini btn-danger' %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
 
 <div class="form-actions">
+  <%= link_to t('add_question_set'),
+              new_survey_assigned_question_set_path(@survey), :class => 'btn btn-primary'  %>
   <%= link_to t('.back', :default => t("helpers.links.back")),
               surveys_path, :class => 'btn'  %>
   <%= link_to t('.edit', :default => t("helpers.links.edit")),
