--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -9,6 +9,30 @@
   <% end %>
 </dl>
 
+<section class="row-fluid">
+  <div class="span6">
+    <h2><%=t 'last_5_days' %></h2>
+    <div class="graph" data-group_id="<%= @group.id %>" data-day_range="5"></div>
+  </div>
+  
+  <div class="span6">
+    <h2><%=t 'last_10_days' %></h2>
+    <div class="graph" data-group_id="<%= @group.id %>" data-day_range="10"></div>
+  </div>
+</section>
+
+<section class="row-fluid">
+  <div class="span6">
+    <h2><%=t 'last_15_days' %></h2>
+    <div class="graph" data-group_id="<%= @group.id %>" data-day_range="15"></div>
+  </div>
+  
+  <div class="span6">
+    <h2><%=t 'last_30_days' %></h2>
+    <div class="graph" data-group_id="<%= @group.id %>" data-day_range="30"></div>
+  </div>
+</section>
+
 <div class="form-actions">
   <%= link_to t('add_member'),
               new_group_user_path(@group), :class => 'btn btn-primary'  %>
