--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,6 +1,7 @@
 <%- model_class = Group -%>
 <div class="page-header">
-  <h1><%= parent %> <%= @group %></h1>
+  <h1 class="pull-left"<h1><%= parent %> <%= @group %></h1></h1>
+  <%= link_to t('download_last_30_days'), division_group_path(parent,@group,format:'csv'), class: 'btn btn-primary btn-large pull-right' %>
 </div>
 
 <dl class="dl-horizontal">
