--- a/app/views/home/_divisions_index.html.erb
+++ b/app/views/home/_divisions_index.html.erb
@@ -7,7 +7,7 @@
       </tr>
     </thead>
     <tbody>
-      <% @organization.divisions.each do |division| %>
+      <% (@organization.try(:divisions)||[]).each do |division| %>
         <tr><td><%= link_to division.name, root_path(division_id: division.id) %></td></tr>
       <% end %>
     </tbody>
