--- a/app/views/assigned_question_sets/show.html.erb
+++ b/app/views/assigned_question_sets/show.html.erb
@@ -1,5 +1,5 @@
 <%- model_class = AssignedQuestionSet -%>
-<div class="page-header">
+<div class="page-header clearfix">
   <h1><%= parent %>: <%= @assigned_question_set %></h1>
 </div>
 
