--- a/app/views/assigned_questions/show.html.erb
+++ b/app/views/assigned_questions/show.html.erb
@@ -1,5 +1,5 @@
 <%- model_class = AssignedQuestion -%>
-<div class="page-header">
+<div class="page-header clearfix">
   <h1><%=t 'response_choices_for' %> "<%= resource %>"</h1>
 </div>
 
