--- a/app/views/divisions/show.html.erb
+++ b/app/views/divisions/show.html.erb
@@ -1,5 +1,5 @@
 <%- model_class = Division -%>
-<div class="page-header">
+<div class="page-header clearfix">
   <h1><%= @division.name %></h1>
 </div>
 
