--- a/app/views/responses/index.html.erb
+++ b/app/views/responses/index.html.erb
@@ -1,5 +1,5 @@
 <%- model_class = Response -%>
-<div class="page-header">
+<div class="page-header clearfix">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
 </div>
 <table class="table table-striped">
