--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <%- model_class = User -%>
-<div class="page-header">
+<div class="page-header clearfix">
   <h1>Add User to <%= parent %></h1>
 </div>
 <%= render :partial => 'form' %>
