--- a/app/views/assigned_divisions/new.html.erb
+++ b/app/views/assigned_divisions/new.html.erb
@@ -1,5 +1,5 @@
 <%- model_class = AssignedDivision -%>
-<div class="page-header">
+<div class="page-header clearfix">
   <h1><%=t '.title', :default => t('helpers.titles.new', :model => model_class.model_name.human,
                                  :default => "New #{model_class.model_name.human}") %></h1>
 </div>
