--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,5 +1,5 @@
 <%- model_class = Group -%>
-<div class="page-header">
+<div class="page-header clearfix">
   <h1 class="pull-left"<h1><%= parent %> <%= @group %></h1></h1>
   <%= link_to t('download_last_30_days'), division_group_path(parent,@group,format:'csv'), class: 'btn btn-primary btn-large pull-right' %>
 </div>
@@ -7,6 +7,11 @@
 <dl class="dl-horizontal">
   <% @group.users.each do |user| %>
     <dt><strong><%= link_to(user,user) %></strong></dt>
+    <dd><%= link_to t('remove'),
+                [user,user.assigned_group_for(@group.id)],
+                :method => :delete,
+                :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure? This will this person as a member of the group.')),
+                :class => 'btn btn-mini btn-danger' %></dd>
   <% end %>
 </dl>
 
