--- a/app/views/question_sets/show.html.erb
+++ b/app/views/question_sets/show.html.erb
@@ -1,5 +1,5 @@
 <%- model_class = QuestionSet -%>
-<div class="page-header">
+<div class="page-header clearfix">
   <h1><%=t '.title', :default => model_class.model_name.human %></h1>
 </div>
 
