--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -31,10 +31,16 @@
 
 
 .home {
+  #final-score {
+    h1 {
+      margin-bottom: 40px;
+    }
+  }
   section {
     clear: both;
     display: none;
     margin-bottom: 20px;
+    &.start,
     &#current-roster {
       display: block;
     }
@@ -82,6 +88,7 @@
   @include nowrap;
 }
 
+.group-graph,
 .graph {
   min-height: 400px;
 }
