--- a/app/views/assigned_question_sets/show.html.erb
+++ b/app/views/assigned_question_sets/show.html.erb
@@ -25,7 +25,7 @@
             </a>
             <ul class="dropdown-menu">
               <% assigned_question.question.responses.each do |response| %>
-                <li><%= link_to raw(response.to_s), edit_question_response_path(assigned_question.question) %></li>
+                <li><%= link_to raw(response.to_s), edit_question_response_path(assigned_question.question,response) %></li>
               <% end %>
               <li><%= link_to t('add_response'), new_question_response_path(assigned_question.question) %></li>
             </ul>
@@ -51,9 +51,9 @@
   <%= link_to t('.back', :default => t("helpers.links.back")),
               parent, :class => 'btn'  %>
   <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_assigned_question_set_path(@assigned_question_set), :class => 'btn' %>
+              [:edit,@assigned_question_set.survey,@assigned_question_set], :class => 'btn' %>
   <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              assigned_question_set_path(@assigned_question_set),
+              [@assigned_question_set.survey,@assigned_question_set],
               :method => 'delete',
               :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
               :class => 'btn btn-danger' %>
