--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -18,24 +18,24 @@
 <section class="row-fluid">
   <div class="span6">
     <h2><%=t 'last_5_days' %></h2>
-    <div class="graph" data-group_id="<%= @group.id %>" data-day_range="5"></div>
+    <div class="group-graph" data-group_id="<%= @group.id %>" data-day_range="5"></div>
   </div>
   
   <div class="span6">
     <h2><%=t 'last_10_days' %></h2>
-    <div class="graph" data-group_id="<%= @group.id %>" data-day_range="10"></div>
+    <div class="group-graph" data-group_id="<%= @group.id %>" data-day_range="10"></div>
   </div>
 </section>
 
 <section class="row-fluid">
   <div class="span6">
     <h2><%=t 'last_15_days' %></h2>
-    <div class="graph" data-group_id="<%= @group.id %>" data-day_range="15"></div>
+    <div class="group-graph" data-group_id="<%= @group.id %>" data-day_range="15"></div>
   </div>
   
   <div class="span6">
     <h2><%=t 'last_30_days' %></h2>
-    <div class="graph" data-group_id="<%= @group.id %>" data-day_range="30"></div>
+    <div class="group-graph" data-group_id="<%= @group.id %>" data-day_range="30"></div>
   </div>
 </section>
 
