--- a/app/views/users/show.csv.erb
+++ b/app/views/users/show.csv.erb
@@ -3,8 +3,28 @@ require 'csv'
 csv_lib = RUBY_VERSION =~ /^1.8/ ? FasterCSV : CSV
  
 csv_output = csv_lib.generate(headers: true) do |csv|
-  csv << [ "Date","Score" ]
-  @user.completed_surveys.limit(30).each do |completed_survey|
-    csv << [completed_survey.date, completed_survey.score]
+  csv << ["Question", @dates.map(&:to_s) ].flatten
+  
+  max_responses = @user.completed_surveys.where{ date >> my{@dates}}.max_by{ |completed_survey| completed_survey.selected_responses.count }.try(:selected_responses).try(:count) || 0
+  
+  last_survey = @user.completed_surveys.where{ date >> my{@dates}}.last
+  
+  last_survey.questions.each do |question|
+    arr = [question.short_text]
+    @dates.each do |date|
+      completed_survey = @user.completed_surveys.find_by_date(date)
+      if completed_survey.nil?
+        arr << 'NA'
+      else
+        selected_responses = completed_survey.selected_responses.joins{ response.question }.where{ response.question.short_text == my{question.short_text}}
+        
+        if selected_responses.empty?
+          arr << 'NA'
+        else
+          arr << selected_responses.first.response.points
+        end
+      end
+    end
+    csv << arr
   end
 end -%><%= csv_output.html_safe %>
