--- a/app/views/home/_survey_index.html.erb
+++ b/app/views/home/_survey_index.html.erb
@@ -68,32 +68,20 @@
 <section id="summary">
   <div class="row-fluid">
     <div class="span6" id="final-score">
-      <h1>Final Score: <span id="score">0</span></h1>
-      <ul class="unstyled">
-        <% @survey.organization.twitter_accounts.each do |account| %>
-          <li>
-            <a href="http://twitter.com/<%= account.nickname %>"><img src="<%= @organization.twitter_profile_image_src(account.nickname) %>" /></a>
-            <a href="http://twitter.com/<%= account.nickname %>"><%= t('follow_on_twitter', name: account.nickname) %></a>
-          </li>
-        <% end %>
-      </dl>
-    </div>
-    
-    <div class="span6" id="scale">
+      <h1><%=t 'your_score' %>: <span id="score">0</span></h1>
+      
       <h3>Scale</h3>
-      <table class="table table-bordered">
+      <table class="table table-bordered point-legend">
         <% @survey.point_ranges.each_with_index do |point_range,i| %>
-          <tr>
+          <tr data-range="<%= point_range.low %>-<%= point_range.high || 1000 %>">
             <td><%= point_range_to_html(@survey,point_range,i) %></td>
             <td><%= point_range.name %></td>
           </tr>
         <% end %>
       </table>
     </div>
-  </div>
-  
-  <div class="row-fluid">
-    <div class="span6" id="needs-for-improvement">
+    
+    <div class="span6" id="scale">
       <h3><%=t ('todays_leaderboard') %></h3>
       <table class="table table-striped">
         <thead>
@@ -114,10 +102,44 @@
         </tbody>
       </table>
     </div>
+  </div>
   
-    <div class="span6" id="graph">
-      <h2><%=t 'last_5_days' %><small> <a href="#" class="completed-survey-link"><%=t 'see_all' %></small></h2>
+  <div class="row-fluid">
+    <div class="span4">
+      <h2><%=t 'last_5_days' %></h2>
       <div class="graph" data-user_id="<%= current_user.try(:id) %>" data-day_range="5"></div>
+    </div>
+    <div class="span4">
+      <h2><%=t 'last_10_days' %></h2>
+      <div class="graph" data-user_id="<%= current_user.try(:id) %>" data-day_range="10"></div>
+    </div>
+    <div class="span4">
+      <h2><%=t 'last_15_days' %></h2>
+      <div class="graph" data-user_id="<%= current_user.try(:id) %>" data-day_range="15"></div>
+    </div>
+  </div>
+  
+  <div class="row-fluid">
+    <div class="span12">
+      <h3><%=t ('follow_us') %></h3>
+      <ul class="unstyled">
+        <% @survey.organization.twitter_accounts.each do |account| %>
+          <li>
+            <a href="http://twitter.com/<%= account.nickname %>"><img src="<%= @organization.twitter_profile_image_src(account.nickname) %>" /></a>
+            <a href="http://twitter.com/<%= account.nickname %>"><%= t('follow_on_twitter', name: account.nickname) %></a>
+          </li>
+        <% end %>
+      </ul>
+      <h3><%=t ('latest_tweets') %></h3>
+      <% @survey.organization.twitter_accounts.each do |account| %>
+        <ul>
+          <% @survey.organization.tweets_for(account.nickname).each_with_index do |tweet,i| %>
+            <% if i < 5 %>
+              <li><%= simple_format auto_link(tweet.text) %></li>
+            <% end %>
+          <% end %>
+        </ul>
+      <% end %>
     </div>
   </div>
 </section>
